# im-emoji-picker

./: .clang-format  CMakeLists.txt  LICENSE  README.md  cache.ini  dank-emoji-picker-fcitx5-addon.conf  dank-emoji-picker-fcitx5.conf  dank-emoji-picker-ibus.xml  dank-emoji-picker.ini  fcitx5-addon.conf  fcitx5-inputmethod.conf  fcitx5-install.sh  fcitx5-remove.sh  ibus-component.xml  ibus-emoji-engine.xml  ibus-install.sh  ibus-remove.sh  install.sh  kate.sh  postinst  rime.xml  sway-window-rules  test-fcitx5.sh  test-ibus.sh
.github/workflows/: build.yml
.scripts/: create-emoji-aliases.js  create-emoji-map.js  fcitx5-install.sh  ibus-install.sh  ibus-remove.sh  package.json
src/: EmojiCache.cpp  EmojiCache.hpp  EmojiLabel.cpp  EmojiLabel.hpp  EmojiPickerSettings.cpp  EmojiPickerSettings.hpp  EmojiPickerWindow.cpp  EmojiPickerWindow.hpp  EmojiPickerWindow.qrc  EmojiSettings.cpp  EmojiSettings.hpp  EmojiWindow.cpp  EmojiWindow.hpp  EmojiWindow.qrc  Fcitx5EmojiEngine.cpp  Fcitx5EmojiEngine.hpp  Fcitx5ImEmojiPickerEngine.cpp  Fcitx5ImEmojiPickerEngine.hpp  Fcitx5ImEmojiPickerModule.cpp  Fcitx5ImEmojiPickerModule.hpp  IBusEmojiEngine.cpp  IBusEmojiEngine.hpp  IBusImEmojiPickerEngine.cpp  IBusImEmojiPickerEngine.hpp  ThreadsafeQueue.hpp  emojis.cpp  ibus_main.cpp  kaomojis.cpp  kaomojis.hpp  logging.cpp  logging.cpp20  logging.hpp  main.cpp  rime_engine.cpp  rime_engine.hpp  rime_main.cpp  rime_main.hpp  rime_window.cpp  rime_window.hpp
src/res/aliases/: github-emojis.ini  gitmoji-emojis.ini
